--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.5",
+    "axios": "^0.27.2",
     "chart.js": "^3.9.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
